update readme and css layout issue

--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ img {
 */
 
 .container {
-    width: 100%;
-    max-width: 1440px;
+    width: 100%; 
 }
 
 .qr-component {
